# Shinku

./: .clangd  .gitignore  README.md  justfile  meson.build  meson.options
asserts/: CG.avif
doc/: design.md  todo.md
docs/: design.md  performance.md  roadmap.md
docs/plans/: 2026-02-21-dns-cache-mvp-design.md  2026-02-21-dns-cache-mvp-impl.md
scripts/: cleanup.sh  setup_test_topology.sh
src/: bpf_log.h  cache.bpf.c  main.c
src/bpf/: cache.bpf.c  xdp_pass.bpf.c
src/bpf/arena/: bpf_arena_alloc.h  bpf_arena_common.h  bpf_arena_htab.h  bpf_arena_list.h
src/cli/: config.c  config.h  main.c
src/common/: bpf_log.h  constants.h  types.h
src/core/: dns_parser.c  dns_parser.h  hash.c  hash.h  loader.c  loader.h
src/include/: bpf_log.h  constants.h  types.h  xdp_parser.h
src/user/: config.c  config.h  loader.c  loader.h  main.c  parser.c  parser.h
src/utils/: hash.c  hash.h  parser.h
subprojects/: c-ares.wrap
test/: sender.py
tests/: dns_hash_test.c
tests/benchmark/: queries.txt  run_benchmark.sh
tests/benchmark/results/: baseline.txt  with-cache.txt
tests/integration/: dns_client.py  pyproject.toml  test_dns_cache.py  topology.py
tests/unit/: dns_hash_test.c  meson.build
tests/unit/arena/: arena_htab.bpf.c  arena_htab_test.c  arena_list.bpf.c  arena_list_test.c
tests/unit/bench/: dns_bench.c
tests/unit/cares/: cares_expand_test.c
tests/unit/parser/: dns_parser_test.c
